# arithmetics

./: .gitignore  README.md  pyproject.toml
docs/: README.md
results/: README.md
samples/: consecutive_signed_sums.txt
src/arithmetics_detroix23/: __init__.py  __main__.py
src/arithmetics_detroix23.egg-info/: PKG-INFO  SOURCES.txt
src/arithmetics_detroix23/consecutive_signed_sums/: __init__.py  forms.py
src/arithmetics_detroix23/conway_sequence/: __init__.py  sequence.py  tests.py
src/arithmetics_detroix23/digital_counters/: __init__.py  counter.py  romans.py  tests.py
src/arithmetics_detroix23/dividers/: __init__.py  bezout.py  dividers.py  gcd.py  tests.py
src/arithmetics_detroix23/predators_prays/: __init__.py  simulation.py  tests.py
src/arithmetics_detroix23/shared/: __init__.py  base10.py  cli.py  defaults.py
src/pyproject_detroix23.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
