[project]
name = "arithmetics_detroix23"
version = "0.1.0"
description = "Solve discrete and arithmetic problems."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "numpy",
    "matplotlib",
]

license = "CC-BY-4.0"
license-files = ["LICENSE.md"]

[project.urls]
Repository = "https://github.com/Detroix23/arithmetics"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
